--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <!-- send.php -->
 
                 <div class="contact__container bd-grid">
-                    <form id="emailsender" action="" class="contact__form">
+                    <form id="emailsender" action="send.php" class="contact__form">
                         <input type="text" name="firstname" placeholder="Ваше имя" class="contact__input">
                         <input type="mail" name="email" placeholder="Ваш имейл" class="contact__input">
                         <textarea name="bday" id="" placeholder="Ваше искреннее поздравление с днюшкой" cols="0" rows="10" class="contact__input"></textarea>
